--- a/demo/html-dir.html
+++ b/demo/html-dir.html
@@ -3,15 +3,15 @@
     <head>
         <title>HTML - dir demo</title>
         <style>
-            .text-align-right {
+            .right {
                 text-align: right;
             }
         </style>
     </head>
     <body>
-        <p>This is text for text-align: left!</p>
-        <p dir="ltr">This is text for dir: ltr!</p>
-        <p class="text-align-right">This is text for text-align: right!</p>
-        <p dir="rtl">This is text for dir: rtl!</p>
+        <p>This is text for text-align: left !  ^_^ Do you like it ?</p>
+        <p dir="ltr">This is text for dir: ltr !  ^_^ Do you like it ?</p>
+        <p class="right">This is text for text-align: right !  ^_^ Do you like it ?</p>
+        <p dir="rtl">This is text for dir: rtl ! ^_^ Do you like it ?</p>
     </body>
 </html>
