--- a/demo/html5-contenteditable.html
+++ b/demo/html5-contenteditable.html
@@ -4,6 +4,7 @@
         <title>HTML5 - contenteditable demo></title>
     </head>
     <body>
-        <p contenteditable>I'm editable. Click to edit.</p>
+        <p contenteditable="true">I'm editable. Click to edit.</p>
+        <p contenteditable="false">I'm not editable. Click to try.</p>
     </body>
 </html>
