--- a/demo/html-bdo-dir.html
+++ b/demo/html-bdo-dir.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HTML - dir demo</title>
+        <title>HTML - bdo - dir demo</title>
         <style>
             .center {
                 text-align: center;
