--- a/demo/html5-contenteditable.html
+++ b/demo/html5-contenteditable.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p contenteditable="true">I'm editable. Click to edit.</p>
-        <p contenteditable="false">I'm not editable. Click to try.</p>
+        <p contenteditable="false">I'm not editable. Click to try it.</p>
     </body>
 </html>
